--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,8 @@ temp/
 
 data/
 
+.env
+
 # End of https://www.gitignore.io/api/node
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
