--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lesaca",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "lodash": "^4.17.15",
